--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>NIT DURGAPUR ALUMNI CELL</title>
+		<title>NIT Durgapur Alumni Cell</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -17,28 +17,24 @@
     <body>
     	<header class="header container-fluid">
             <div class="row header-text">
-            <div class="col-md-3">
-            </div>
-            <img class="logo col-md-2" src="img/logo.png"/>
-            <div class="primary-header-text col-md-7">
-            <h1 class="no-top-bottom-margin">
-                ALUMNI CELL
-            </h1>
-    		<h2 class="no-top-bottom-margin">
+            <img class="logo col-md-1" src="img/logo.png"/>
+            <div class="primary-header-text col-md-5">
+            <h3 class="primary-text">
                 National Institute of Technology Durgapur
-            </h2>
-            <h3 class="no-top-bottom-margin">
-                राष्ट्रीय प्रौद्योगिकी संस्थान दुर्गापुर
             </h3>
-            <h5 class="no-top-bottom-margin">(An Institute of National Importance under Government of India, Ministry of Human Resource Development) 
-               <br> Mahatma Gandhi Avenue, Durgapur 713209, West Bengal, INDIA</h5>
+            </div>
+            <div class="secondary-header-text col-md-4">
+                <h3 class="secondary-text col-md-offset-8">
+                    Alumni Cell
+                </h3>
+            </div>
+            <div class="social-icons col-md-1">
+                <a href="#"><i class="fa fa-facebook icons"></i></a>
+                <a href="#"><i class="fa fa-twitter icons"></i></a>
+                <a href="#"><i class="fa fa-google-plus icons"></i></a>
             </div>
             </div>
-            <!-- <div class="row">
-                <div class="secondary-header-text col-md-12 text-center">
-                    <h2>Alumni Cell</h2>
-                </div>
-            </div> -->
+
         <nav class="navbar navbar-inverse">
             <div class="container-fluid no-left-right-padding">
             <ul class="nav navbar-nav">
