--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<title>NIT Durgapur Alumni Cell</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">  
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/mdb.css">
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/content.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -50,7 +51,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Our Alumni</a>
                     <ul class="dropdown-menu">
-                        <li><a href="javascript:void(0);" id="alumnistats">Alumni Statistics</a></li>
+                        <li><a href="javascript:void(0);" id="alumnistats">Alumni At A Glance</a></li>
                         <li><a href="javascript:void(0);" id="searchalumni">Search our Alumni</a></li>
                         <li><a href="javascript:void(0);" id="alumniregs">Alumni Registration</a></li>
                     </ul>
@@ -58,13 +59,13 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Events</a>
                     <ul class="dropdown-menu">
-                        <li><a href="javascript:void(0);" id="popularlectures">Popular Lectures</a></li>
-                        <li><a href="javascript:void(0);" id="beyondthewall">Beyond The Wall Lectures Series</a></li>
+                        <li><a href="javascript:void(0);" id="popularlectures">Invited Lecture Series</a></li>
+                        <li><a href="javascript:void(0);" id="beyondthewall">Beyond The Wall Lecture Series</a></li>
                         <li><a href="javascript:void(0);" id="studentalumnimeet">Student-Alumni Meet</a></li>
                     </ul>
                 </li>
-                <li><a href="javascript:void(0);" id="alumniawards">Alumni Awards</a></li>
-                <li><a href="javascript:void(0);" id="givingback">Giving Back to Alma Mater</a></li>
+                <li><a href="javascript:void(0);" id="alumniawards">Alumni Achievements</a></li>
+                <li><a href="javascript:void(0);" id="givingback">Giving Back</a></li>
                 <li><a href="javascript:void(0);" id="alumniservices">Alumni Services</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Students' Alumni Body</a>
@@ -74,7 +75,7 @@
                         <li><a href="javascript:void(0);" id="studentvolunteers">Student Volunteers</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Alumni Association(NITDAA)</a></li>
+                <li><a href="http://nitdaa.org">Alumni Association(NITDAA)</a></li>
             </ul>
         </div>
         </nav>
