--- a/cms.html
+++ b/cms.html
@@ -77,7 +77,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/img1.jpg" alt="Chania" class="carousel-images">
+      <img src="img/IMG_7194.JPG" alt="Chania" class="carousel-images">
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
         <p>LA is always so much fun!</p>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="item">
-      <img src="img/img2.jpg" alt="Chicago" class="carousel-images">
+      <img src="img/IMG_5895.JPG" alt="Chicago" class="carousel-images">
       <div class="carousel-caption">
         <h3>Chicago</h3>
         <p>Thank you, Chicago!</p>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="item">
-      <img src="img/img3.jpg" alt="New York" class="carousel-images">
+      <img src="img/IMG_7654.JPG" alt="New York" class="carousel-images">
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>We love the Big Apple!</p>
@@ -110,18 +110,14 @@
   </a>
 </div>  
 </div>
-<div class="row">
-<section id="objectives" class="parallax">
-  <h2 id="parallax-text">Objectives</h2>
+<div class="row welcome-wrap">
+<section id="objectives" class="parallax shadow">
+  <h2 id="parallax-text">Welcome to Alumni Cell</h2>
   <div class="col-md-6 col-md-offset-3">
     <hr>
   </div>
     <div class="col-md-10 col-md-offset-1 black-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed lorem quis felis elementum iaculis eget a nibh. Vestibulum at sem auctor libero posuere euismod. Phasellus iaculis diam quis varius lacinia. Nunc laoreet consectetur turpis quis tristique. Proin dignissim posuere ante ut consectetur. Cras fermentum hendrerit blandit. Duis finibus mattis nunc, in laoreet metus porta vehicula. Pellentesque pretium nisi lectus, sit amet vulputate augue pharetra ut. Cras sollicitudin eget lectus vitae egestas. Cras non justo ipsum. Suspendisse sagittis est eget arcu consequat, ut commodo elit dapibus. Nam non purus lorem. Pellentesque nec augue nec nunc ultrices efficitur ac ut ex. Curabitur bibendum aliquam nibh, id convallis sapien luctus eu. Curabitur consequat, erat eget hendrerit sodales, erat metus efficitur felis, eget posuere lorem ligula nec nunc.
-Mauris dapibus convallis tellus varius suscipit. Nam venenatis diam maximus lorem dignissim elementum. Etiam bibendum velit vel euismod consectetur. Quisque sapien ex, tincidunt vel dolor et, fringilla luctus turpis. In sodales nisl ipsum, sit amet vulputate libero pellentesque id. Sed vel rutrum magna. Ut gravida lectus semper, pellentesque massa id, dignissim enim. Nullam id lacus libero. Vestibulum varius massa eget metus volutpat malesuada. Sed lobortis elementum ornare. Aliquam elementum id orci eu vehicula. Ut congue ligula in feugiat luctus. Nulla sagittis orci vel libero ultricies, quis sagittis eros bibendum.
-Duis a dolor tellus. Mauris varius consequat dui, sed eleifend eros blandit vel. Donec porta sapien a felis luctus aliquam. Morbi dictum eu ipsum at imperdiet. Praesent tincidunt dolor et nunc congue, et malesuada leo tincidunt. Proin eleifend felis vehicula sagittis venenatis. Curabitur in nulla pharetra, ultrices quam vel, aliquet metus. Suspendisse dictum id tortor sit amet rhoncus. Praesent ullamcorper purus ut velit tempus, vel placerat diam vestibulum. Proin pretium enim sed nulla hendrerit, suscipit ultricies magna mattis. Mauris ultrices nibh eros, quis pharetra lacus interdum a. Nullam libero odio, dictum eget dolor ut, ornare varius elit. Aenean aliquet volutpat rutrum. Vestibulum non ultrices metus. Vestibulum sit amet commodo est.
-Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feugiat est dui id dui. Donec at magna in nulla vehicula suscipit vel ut ante. Pellentesque iaculis metus hendrerit tortor ultricies porttitor. Sed accumsan urna lacinia nisi posuere consectetur. Aenean pulvinar pharetra diam vel aliquet. Sed porta massa id gravida feugiat. Duis ipsum arcu, semper sit amet porta in, aliquam et sapien. Maecenas dui nulla, posuere non massa non, egestas dapibus erat. Duis fringilla tellus blandit eros faucibus, sit amet vulputate libero blandit. In tristique purus justo, in semper leo accumsan eget. Vestibulum ornare, tellus malesuada tincidunt hendrerit, dolor magna cursus ex, in sodales nulla justo nec purus. Fusce molestie est ut ligula hendrerit faucibus. Phasellus pellentesque elit nisi, quis ultricies tortor consequat sed. Integer massa purus, imperdiet ac nibh ut, pharetra pulvinar purus. Nulla nec magna sagittis felis accumsan luctus sit amet id leo.
-    </div>
+      Lorem i imperdiet. Pramagna in nulla vehicula suscipit vel ut ante. P
 </section>
 </div>
 <!-- <div class="row modulator">
