--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
     
     <body>
-    	<header class="header container-fluid">
+    	<header class="header container-fluid" id="header">
             <div class="row header-text">
             <img class="logo col-md-1" src="img/logo.png"/>
             <div class="primary-header-text col-md-5">
@@ -36,7 +36,7 @@
             </div>
             </div>
 
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse" id="navbar">
             <div class="container-fluid no-left-right-padding">
             <ul class="nav navbar-nav">
                 <li><a href="javascript:void(0);" id="home">Home</a></li>
