--- a/cms.html
+++ b/cms.html
@@ -46,23 +46,43 @@
         <div class="col-md-10 col-md-offset-1">
             <ul class="event-list">
               <li class="event">
-                <div class="event-text text-center">
+                <div class="links-text text-center">
                   Event 1
                 </div>
+                          <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div>
               </li>
               <li class="event">
-                <div class="event-text text-center">
+                <div class="links-text text-center">
                   Event 1
                 </div>
+                          <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div>
               </li>
               <li class="event">
-                <div class="event-text text-center">
+                <div class="links-text text-center">
                   Event 3
                 </div>
+                          <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div>
               </li>
             </ul>
             <a href="#" class="view-link"><p class="text-center view-all">View All</p></a>
           </div>
+            <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div>
       </div>
       </div>
   </div>
