--- a/cms.html
+++ b/cms.html
@@ -1,5 +1,4 @@
-<div id="homewrapper">
-
+<div id="homewrapper" class="row">
   <div class="col-md-2 first-card">
       <div class="row shadow event-row">
       <div class="event-wrapper">
