fixed parallax bg

--- a/cms.html
+++ b/cms.html
@@ -131,12 +131,16 @@
 </div>
 <div class="row welcome-wrap">
 <section id="objectives" class="parallax shadow">
+  <div class="welcome-bg"></div>
+  <div class="welcome-text-wrap">
   <h2 id="parallax-text">Welcome to Alumni Cell</h2>
   <div class="col-md-6 col-md-offset-3">
     <hr>
   </div>
     <div class="col-md-10 col-md-offset-1 black-text">
       Lorem i imperdiet. Pramagna in nulla vehicula suscipit vel ut ante. P
+    </div>
+  </div>
 </section>
 </div>
 <!-- <div class="row modulator">
