--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
     	<header class="header container-fluid" id="header">
             <div class="row header-text">
-            <img class="logo col-md-1" src="img/logo.png"/>
+            <img class="logo col-md-1" src="img/blue-logo.png"/>
             <div class="primary-header-text col-md-5">
             <h3 class="primary-text">
                 National Institute of Technology Durgapur
