--- a/cms.html
+++ b/cms.html
@@ -143,7 +143,7 @@
   </div>
 </section>
 </div>
-<!-- <div class="row modulator">
+<div class="row shadow notable-alumni-wrap">
   <div class="col-md-12">
     <h2 id="parallax-text" class="text-center">Notable Alumni</h2>
     <div class="row">
@@ -151,30 +151,18 @@
       <hr>
     </div>
   </div>
-    <div id="notablealumniCarousel" class="carousel slide" data-ride="carousel">
+  <div id="notablealumniCarousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="item active">
       <div class="row">
       <div class="col-md-4">
-      <img src="img/img1.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
+      <img src="img/IMG_1480.JPG" alt="Chania" class="img-responsive">
+    </div>
+    <div class="col-md-4">
+      <img src="img/IMG_0357.JPG" alt="Chania" class="img-responsive">
     </div>
     <div class="col-md-4">
       <img src="img/img1.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <img src="img/img1.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
     </div>
     </div>
     </div>
@@ -197,32 +185,6 @@
     </div>
     <div class="col-md-4">
       <img src="img/img2.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
-    </div>
-    </div>
-    </div>
-
-    <div class="item">
-      <div class="row">
-      <div class="col-md-4">
-      <img src="img/img3.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <img src="img/img3.jpg" alt="Chania" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <img src="img/img3.jpg" alt="Chania" class="img-responsive">
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
         <p>LA is always so much fun!</p>
@@ -241,7 +203,7 @@
   </a>
 </div>
   </div>
-</div> -->
+</div>
 </div>
 <div class="col-md-2 last-card shadow">
      <div class="login-wrapper">
@@ -305,7 +267,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
     </div>
     <div class="row">
     <div class="col-md-10 col-md-offset-1 text-center shadow messagewrapper">
-    	<h2>Message from the Dean(AOT&P)</h2>
+    	<h3 class="font">Message from the Dean(AOTP)</h3>
     	<hr>
     	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed lorem quis felis elementum iaculis eget a nibh. Vestibulum at sem auctor libero posuere euismod. Phasellus iaculis diam quis varius lacinia. Nunc laoreet consectetur turpis quis tristique. Proin dignissim posuere ante ut consectetur. Cras fermentum hendrerit blandit. Duis finibus mattis nunc, in laoreet metus porta vehicula. Pellentesque pretium nisi lectus, sit amet vulputate augue pharetra ut. Cras sollicitudin eget lectus vitae egestas. Cras non justo ipsum. Suspendisse sagittis est eget arcu consequat, ut commodo elit dapibus. Nam non purus lorem. Pellentesque nec augue nec nunc ultrices efficitur ac ut ex. Curabitur bibendum aliquam nibh, id convallis sapien luctus eu. Curabitur consequat, erat eget hendrerit sodales, erat metus efficitur felis, eget posuere lorem ligula nec nunc.
 Mauris dapibus convallis tellus varius suscipit. Nam venenatis diam maximus lorem dignissim elementum. Etiam bibendum velit vel euismod consectetur. Quisque sapien ex, tincidunt vel dolor et, fringilla luctus turpis. In sodales nisl ipsum, sit amet vulputate libero pellentesque id. Sed vel rutrum magna. Ut gravida lectus semper, pellentesque massa id, dignissim enim. Nullam id lacus libero. Vestibulum varius massa eget metus volutpat malesuada. Sed lobortis elementum ornare. Aliquam elementum id orci eu vehicula. Ut congue ligula in feugiat luctus. Nulla sagittis orci vel libero ultricies, quis sagittis eros bibendum.
