quote of the day

--- a/cms.html
+++ b/cms.html
@@ -138,7 +138,7 @@
     <hr>
   </div>
     <div class="col-md-10 col-md-offset-1 black-text">
-      Lorem i imperdiet. Pramagna in nulla vehicula suscipit vel ut ante. P
+      Alumni cell is functioning at the Institute as a nodal cell for maintaining liaison with NIT Durgapur Alumni all across the globe and to involve them in the all-round development and growth of the Institute. NIT Durgapur is proud to have as its Alumni a group of over 25000+ Engineers, Technocrats, Scientists, managers and Entrepreneurs. They are our global brand ambassadors. This office promotes and encourages the Alumni to exchange professional knowledge by undertaking and facilitating seminar, lectures and meeting amongst Alumni, students, faculty and others. The office is also entrusted with developing institutional partnership and collaboration with other organization such as universities in India and abroad, academic and research institutes and industries.
     </div>
   </div>
 </section>
@@ -205,8 +205,10 @@
   </div>
 </div>
 </div>
-<div class="col-md-2 last-card shadow">
-     <div class="login-wrapper">
+
+<div class="col-md-2 last-card">
+   <div class="row login-row shadow">
+    <div class="login-wrapper">
     <p class="card-header text-center">Login</p>
     <form method="post">
     
@@ -227,14 +229,27 @@
     <button type="button" class="btn btn-primary">Submit</button>
   </form>
   <h6 id="newreg">New user? Join our network <a href="#">here!</a></h6>
-  </form>
    <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <hr>
     </div>
    </div>
   </div>
+</div>
+
+  <div class="row shadow quote-row">
+  <div class="quote-wrapper">
+    <p class="card-header text-center">Quote of the Day</p>
+    <blockquote>Dreams and Dedication are a really powerful combination</blockquote>
+    <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <hr>
+    </div>
+   </div>
   </div>
+  </div>
+
+</div>
 </div>
 
 <div id="aimswrapper">
