beyond the walls

--- a/cms.html
+++ b/cms.html
@@ -133,7 +133,7 @@
 <section id="objectives" class="parallax shadow">
   <div class="welcome-bg"></div>
   <div class="welcome-text-wrap">
-  <h2 id="parallax-text">Welcome to Alumni Cell</h2>
+  <h2 class="parallax-text">Welcome to Alumni Cell</h2>
   <div class="col-md-6 col-md-offset-3">
     <hr>
   </div>
@@ -145,7 +145,7 @@
 </div>
 <div class="row shadow notable-alumni-wrap">
   <div class="col-md-12">
-    <h2 id="parallax-text" class="text-center">Notable Alumni</h2>
+    <h2 class="parallax-text text-center">Notable Alumni</h2>
     <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <hr>
@@ -295,7 +295,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 <div id="meettheteamwrapper">
 <div class="col-md-10 general-content-wrapper col-md-offset-1" id="meettheteam">
 	<div class="text-center">
-		<h2 id="parallax-text">Our Team</h2>
+		<h2 class="parallax-text">Our Team</h2>
 		<div class="row">
       <div class="col-md-6 col-md-offset-3">
         <hr>
@@ -637,4 +637,107 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 </div>
 <div class="col-md-1 content">
   </div>
+</div>
+
+<div id="beyondthewallwrapper" class="row">
+
+  <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Beyond The Wall Lecture Series</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
+
+  <div class="btw-first col-md-10 col-md-offset-1">
+      <div class="row">
+        <img src="img/IMG_0310.JPG" class="img-responsive col-md-2 shadow btw-image"/>
+        <div class="col-md-8 btw-text shadow">
+            <h3> Lecture Description </h3>
+            <h4> More Description </h4>
+        </div>
+      </div>
+      <a href="#firstbtw" data-toggle="modal" data-target="#firstbtw" class="read-more">
+        Read More
+      </a>
+  </div>
+
+  <div class="btw-second col-md-10 col-md-offset-1">
+      <div class="row">
+        <img src="img/IMG_0310.JPG" class="img-responsive col-md-2 shadow btw-image"/>
+        <div class="col-md-8 btw-text shadow">
+            <h3> Lecture Description </h3>
+            <h4> More Description </h4>
+        </div>
+      </div>
+      <a href="#secondbtw" data-toggle="modal" data-target="#secondbtw" class="read-more">
+        Read More
+      </a>
+  </div>
+
+  <div class="btw-third col-md-10 col-md-offset-1">
+      <div class="row">
+        <img src="img/IMG_0310.JPG" class="img-responsive col-md-2 shadow btw-image"/>
+        <div class="col-md-8 btw-text shadow">
+            <h3> Lecture Description </h3>
+            <h4> More Description </h4>
+        </div>
+      </div>
+      <a href="#thirdbtw" data-toggle="modal" data-target="#thirdbtw" class="read-more">
+        Read More
+      </a>
+  </div>
+
+  <div id="firstbtw" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title text-center">Beyond The Wall Lecture 1</h4>
+      </div>
+      <div class="modal-body">
+        <p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="secondbtw" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title text-center">Beyond The Wall Lecture 2</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="thirdbtw" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title text-center">Beyond The Wall Lecture 3</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </div>
