--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	</head>
     
     <body>
+        <div id="overlay">
+            <img src="img/loader.gif" id="loader" />
+        </div>
     	<header class="header container-fluid" id="header">
             <div class="row header-text">
             <img class="logo col-md-1" src="img/blue-logo.png"/>
