--- a/cms.html
+++ b/cms.html
@@ -741,3 +741,35 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 </div>
 
 </div>
+
+<div id="photowrapper" class="row">
+
+  <div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1504.JPG">
+    <img src="img/IMG_1504.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1504.JPG">
+    <img src="img/IMG_1504.JPG" alt="Forest" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1504.JPG">
+    <img src="img/IMG_1504.JPG" alt="Northern Lights" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1504.JPG">
+    <img src="img/IMG_1504.JPG" alt="Mountains" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+</div>
