--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">  
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/mdb.css">
         <link rel="stylesheet" href="css/layout.css">
@@ -41,6 +42,12 @@
 
         <nav class="navbar navbar-inverse" id="navbar">
             <div class="container-fluid no-left-right-padding">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+             </button>
+            <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="javascript:void(0);" id="home">Home</a></li>
                 <li class="dropdown">
@@ -81,10 +88,29 @@
                 <li><a href="http://nitdaa.org">Alumni Association(NITDAA)</a></li>
             </ul>
         </div>
+        </div>
         </nav>
     	</header>
 
         <section class="container-fluid content" id="fillable">
+        </section>
+
+        <section class="container-fluid bottom-nav">
+            <div class="row">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-3">
+                    <a href="#" class="bot-nav text-center">Feedback</a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#" id="photogallery" class="bot-nav text-center">Photo Gallery</a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#" class="bot-nav text-center">Contact Us</a>
+                </div>
+                <div class="col-md-1">
+                </div>
+            </div>
         </section>
 
         <footer class="footer container-fluid text-center foot">Copyright © 2017. All Rights Reserved. National Institute of Technology, Durgapur.
