minor fixes and full responsive

--- a/cms.html
+++ b/cms.html
@@ -267,7 +267,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 
 <div id="messagefromdeanwrapper" class="messagefromdeancontent">
 	<div class="row imagewrapper">
-		<div class="col-md-3 imagecontainer col-xs-offset-2">
+		<div class="col-md-3 imagecontainer">
             <img id="deanimage" src="img/nkroy.jpg" class="shadow"/>
 		</div>
 		<div class="col-md-5 imagedescription shadow">
