--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <a href="#"><i class="fa fa-google-plus icons"></i></a>
             </div>
             </div>
-
+        
+        <div class="nav-wrapper">
         <nav class="navbar navbar-inverse" id="navbar">
             <div class="container-fluid no-left-right-padding">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -90,6 +91,8 @@
         </div>
         </div>
         </nav>
+        </div>
+
     	</header>
 
         <section class="container-fluid content" id="fillable">
