--- a/cms.html
+++ b/cms.html
@@ -179,6 +179,7 @@
 <div class="row shadow notable-alumni-wrap">
   <div class="col-md-12">
     <h2 class="parallax-text text-center">Notable Alumni</h2>
+    <img src="img/notable.png" class="img-responsive notable-img"/>
     <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <hr>
