--- a/cms.html
+++ b/cms.html
@@ -259,7 +259,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
             <img id="deanimage" src="img/nkroy.jpg" class="shadow"/>
 		</div>
 		<div class="col-md-5 imagedescription shadow">
-			<h3 class="imagetext" id="mainheader">Dr. Nirmal Kumar Roy</h3>
+			<h3 class="imagetext" id="mainheader">Prof. Nirmal Kumar Roy</h3>
 			<h6 class="imagetext">Dean (Alumni, Outreach, Training and Placement)</h6>
             <h6 class="imagetext">PhD (University of South Australia, Australia)</h6>
             <h6 class="imagetext">M.E. (Indian Institute of Science, Bangalore, India)</h6>
@@ -295,7 +295,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
       <img src="img/nkroy.jpg" class="img-responsive shadow team-image" />
     </div>
     <div class="col-md-7 shadow team-text">
-      <h3 class="imagetext" id="mainheader">Dr. Nirmal Kumar Roy</h3>
+      <h3 class="imagetext" id="mainheader">Prof. Nirmal Kumar Roy</h3>
             <h6 class="imagetext">Dean (Alumni, Outreach, Training and Placement)</h6>
             <h6 class="imagetext">Department of Electrical Engineering</h6>
             <h6 class="imagetext">National Institute of Technology Durgapur</h6>
