--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">About Us</a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0);" id="aims">Objectives</a></li>
-                        <li><a href="javascript:void(0);" id="messagefromdean">Message from the Director and Dean(AOT&P)</a></li>
+                        <li><a href="javascript:void(0);" id="messagefromdean">Message from the Dean(AOT&P)</a></li>
                         <li><a href="javascript:void(0);" id="meettheteam">Our Team</a></li>
                     </ul>
                 </li>
