--- a/cms.html
+++ b/cms.html
@@ -335,7 +335,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 <div id="alumniregswrapper">
   <div class="col-md-1 content">
   </div>
-<div class="col-md-10 general-content-wrapper" id="alumniregs">
+<div class="col-md-10 shadow reg-form" id="alumniregs">
 	<div class="text-center">
 		<h2>Register on our Alumni Network!</h2>
 		<hr>
@@ -551,7 +551,7 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 <div id="searchalumniwrapper">
   <div class="col-md-1 content">
   </div>
-<div class="col-md-10 general-content-wrapper" id="searchalumni">
+<div class="col-md-10 shadow searchalumni">
     <div class="text-center">
     <h2>Search our vast Alumni Network!</h2>
     <hr>
