--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="social-icons col-md-1">
                 <a href="#"><i class="fa fa-facebook icons"></i></a>
                 <a href="#"><i class="fa fa-twitter icons"></i></a>
-                <a href="#"><i class="fa fa-google-plus icons"></i></a>
+                <a href="#"><i class="fa fa-linkedin icons"></i></a>
             </div>
             </div>
         
