--- a/cms.html
+++ b/cms.html
@@ -151,7 +151,7 @@
       <label>Password</label>
     </div>
     
-    <button type="button" class="btn btn-primary">Submit</button>
+    <button type="button" class="btn btn-primary login">Submit</button>
   </form>
   <h6 id="newreg">New user? Join our network <a href="#">here!</a></h6>
    <div class="row">
@@ -759,5 +759,52 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
+</div>
+
+<div id="alumnistudentmentorshipwrapper" class="row">
+
+    <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Alumni Student Mentorship Programme</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
+
+</div>
+
+<div id="iiiprogrammewrapper" class="row">
+
+    <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Industry-Institute-Interaction Programme</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
+
+</div>
+
+<div id="studentvolunteerswrapper" class="row">
+
+    <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Student Volunteers</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
 
 </div>
