Updating Static Site

--- a/cms.html
+++ b/cms.html
@@ -241,15 +241,16 @@
 </div>
 
 <div id="aimswrapper">
-  <div class="col-md-1 content">
-  </div>
-<div class="col-md-10 shadow" id="aims-wrap">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed lorem quis felis elementum iaculis eget a nibh. Vestibulum at sem auctor libero posuere euismod. Phasellus iaculis diam quis varius lacinia. Nunc laoreet consectetur turpis quis tristique. Proin dignissim posuere ante ut consectetur. Cras fermentum hendrerit blandit. Duis finibus mattis nunc, in laoreet metus porta vehicula. Pellentesque pretium nisi lectus, sit amet vulputate augue pharetra ut. Cras sollicitudin eget lectus vitae egestas. Cras non justo ipsum. Suspendisse sagittis est eget arcu consequat, ut commodo elit dapibus. Nam non purus lorem. Pellentesque nec augue nec nunc ultrices efficitur ac ut ex. Curabitur bibendum aliquam nibh, id convallis sapien luctus eu. Curabitur consequat, erat eget hendrerit sodales, erat metus efficitur felis, eget posuere lorem ligula nec nunc.
-Mauris dapibus convallis tellus varius suscipit. Nam venenatis diam maximus lorem dignissim elementum. Etiam bibendum velit vel euismod consectetur. Quisque sapien ex, tincidunt vel dolor et, fringilla luctus turpis. In sodales nisl ipsum, sit amet vulputate libero pellentesque id. Sed vel rutrum magna. Ut gravida lectus semper, pellentesque massa id, dignissim enim. Nullam id lacus libero. Vestibulum varius massa eget metus volutpat malesuada. Sed lobortis elementum ornare. Aliquam elementum id orci eu vehicula. Ut congue ligula in feugiat luctus. Nulla sagittis orci vel libero ultricies, quis sagittis eros bibendum.
-Duis a dolor tellus. Mauris varius consequat dui, sed eleifend eros blandit vel. Donec porta sapien a felis luctus aliquam. Morbi dictum eu ipsum at imperdiet. Praesent tincidunt dolor et nunc congue, et malesuada leo tincidunt. Proin eleifend felis vehicula sagittis venenatis. Curabitur in nulla pharetra, ultrices quam vel, aliquet metus. Suspendisse dictum id tortor sit amet rhoncus. Praesent ullamcorper purus ut velit tempus, vel placerat diam vestibulum. Proin pretium enim sed nulla hendrerit, suscipit ultricies magna mattis. Mauris ultrices nibh eros, quis pharetra lacus interdum a. Nullam libero odio, dictum eget dolor ut, ornare varius elit. Aenean aliquet volutpat rutrum. Vestibulum non ultrices metus. Vestibulum sit amet commodo est.
-Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feugiat est dui id dui. Donec at magna in nulla vehicula suscipit vel ut ante. Pellentesque iaculis metus hendrerit tortor ultricies porttitor. Sed accumsan urna lacinia nisi posuere consectetur. Aenean pulvinar pharetra diam vel aliquet. Sed porta massa id gravida feugiat. Duis ipsum arcu, semper sit amet porta in, aliquam et sapien. Maecenas dui nulla, posuere non massa non, egestas dapibus erat. Duis fringilla tellus blandit eros faucibus, sit amet vulputate libero blandit. In tristique purus justo, in semper leo accumsan eget. Vestibulum ornare, tellus malesuada tincidunt hendrerit, dolor magna cursus ex, in sodales nulla justo nec purus. Fusce molestie est ut ligula hendrerit faucibus. Phasellus pellentesque elit nisi, quis ultricies tortor consequat sed. Integer massa purus, imperdiet ac nibh ut, pharetra pulvinar purus. Nulla nec magna sagittis felis accumsan luctus sit amet id leo.
-</div>
-<div class="col-md-1 content">
+      <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Objectives</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
   </div>
 </div>
 
@@ -330,6 +331,61 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
     </div>
   </div>
 </div>
+</div>
+
+<div id="alumnistatswrapper" class="row">
+  <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Alumni At A Glance</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1 table-responsive">
+              <table class="table table-striped">
+                    <thead>
+                      <tr>
+                         <th>S. No.</th>
+                         <th>Name</th>
+                         <th>Graduation Year</th>
+                         <th>Degree</th>
+                         <th>Department</th>
+                         <th>Present Organisation</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>John Appleseed</td>
+                         <td>1965</td>
+                         <td>B.Tech</td>
+                         <td>Computer Science and Engineering</td>
+                         <td>Google</td>
+                      </tr>
+                      <tr>
+                         <td>1</td>
+                         <td>John Appleseed</td>
+                         <td>1965</td>
+                         <td>B.Tech</td>
+                         <td>Computer Science and Engineering</td>
+                         <td>Google</td>
+                      </tr>
+                      <tr>
+                         <td>1</td>
+                         <td>John Appleseed</td>
+                         <td>1965</td>
+                         <td>B.Tech</td>
+                         <td>Computer Science and Engineering</td>
+                         <td>Google</td>
+                      </tr>
+                   </tbody>
+              </table>
+            </div>
+          </div>
+      </div> 
+  </div>
 </div>
 
 <div id="alumniregswrapper">
@@ -627,6 +683,22 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
   </div>
 </div>
 
+<div id="popularlectureswrapper" class="row">
+
+     <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Invited Lecture Series</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
+
+</div>
+
 <div id="beyondthewallwrapper" class="row">
 
   <div class="event-description col-md-10 col-md-offset-1 shadow">
@@ -730,34 +802,128 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
 
 </div>
 
-<div id="photowrapper" class="row">
+<div id="studentalumnimeetwrapper" class="row">
+    <div class="event-description col-md-10 col-md-offset-1 shadow">
+      <p class="parallax-text text-center">Student Alumni Meet</p>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <hr>
+        </div>
+      </div> 
+      <div class="event-description-text text-center">
+          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+      </div> 
+  </div>
+</div>
 
-  <div class="gallery shadow">
+<div id="photowrapper" class="col-md-10 col-md-offset-1">
+
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0310.JPG">
+    <img src="img/IMG_0310.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0317.JPG">
+    <img src="img/IMG_0317.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0318.JPG">
+    <img src="img/IMG_0318.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0357.JPG">
+    <img src="img/IMG_0357.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1479.JPG">
+    <img src="img/IMG_1479.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1480.JPG">
+    <img src="img/IMG_1480.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
   <a target="_blank" href="img/IMG_1504.JPG">
     <img src="img/IMG_1504.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery shadow">
-  <a target="_blank" href="img/IMG_1504.JPG">
-    <img src="img/IMG_1504.JPG" alt="Forest" width="300" height="200">
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1519.JPG">
+    <img src="img/IMG_1519.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1542.JPG">
+    <img src="img/IMG_1542.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5834.JPG">
+    <img src="img/IMG_5834.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5847.JPG">
+    <img src="img/IMG_5847.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5850.JPG">
+    <img src="img/IMG_5850.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5895.JPG">
+    <img src="img/IMG_5895.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7160.JPG">
+    <img src="img/IMG_7160.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7194.JPG">
+    <img src="img/IMG_7194.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7617.JPG">
+    <img src="img/IMG_7617.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7654.JPG">
+    <img src="img/IMG_7654.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7657.JPG">
+    <img src="img/IMG_7657.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7670.JPG">
+    <img src="img/IMG_7670.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_9097.JPG">
+    <img src="img/IMG_9097.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_9108.JPG">
+    <img src="img/IMG_9108.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
-
-<div class="gallery shadow">
-  <a target="_blank" href="img/IMG_1504.JPG">
-    <img src="img/IMG_1504.JPG" alt="Northern Lights" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery shadow">
-  <a target="_blank" href="img/IMG_1504.JPG">
-    <img src="img/IMG_1504.JPG" alt="Mountains" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
 </div>
 </div>
 
