--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="javascript:void(0);" id="home">Home</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">About Us</a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">About Us</a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0);" id="aims">Objectives</a></li>
                         <li><a href="javascript:void(0);" id="messagefromdean">Message from the Dean(AOT&P)</a></li>
@@ -62,7 +62,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Our Alumni</a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">Our Alumni</a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0);" id="alumnistats">Alumni At A Glance</a></li>
                         <li><a href="javascript:void(0);" id="searchalumni">Search our Alumni</a></li>
@@ -70,7 +70,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Events</a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">Events</a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0);" id="popularlectures">Invited Lecture Series</a></li>
                         <li><a href="javascript:void(0);" id="beyondthewall">Beyond The Wall Lecture Series</a></li>
@@ -81,7 +81,7 @@
                 <li><a href="javascript:void(0);" id="givingback">Giving Back</a></li>
                 <li><a href="javascript:void(0);" id="alumniservices">Alumni Services</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Students' Alumni Body</a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">Students' Alumni Body</a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0);" id="alumnistudentmentorship">Alumni-Student Mentorship Programme</a></li>
                         <li><a href="javascript:void(0);" id="iiiprogramme">Industry-Institute-Interaction Programme</a></li>
